# museum_api

./: .gitignore  .readthedocs.yaml  README.md  README.rst  config.py  converter.py  fetch_response.py  file_exists.py  flatten.py  generate_csv.py  generate_html.py  generate_pdf.py  generate_xml.py  mail.py  main.py  museum.csv  museum.html  museum.xml  pyproject.toml  setup.cfg  zipper.py
docs/: museum.csv  museum.html
docs/source/: conf.py  index.rst
reports/: museum.xml
src/reporter/: __init__.py
src/reporter/converter/: __init__.py  converter.py  generate_csv.py  generate_html.py  generate_pdf.py  generate_xml.py
src/reporter/helpers/: __init__.py  fetch_response.py
templates/: report.html
tests/: mock_server.py  test_csv_converter.py  test_fetch_response.py  test_html_converter.py  test_mock_server.py  test_pdf_generator.py  test_xml_conveter.py
tests/fixtures/: museum.csv  museum.html  museum.json  museum.xml  resp.json
