[metadata]
name = reporter-mayank1729
version = 0.0.2
author = Mayank Sharma
author_email = me.mayank.0602@gmail.com
description = A package for generating API data reports in different formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayankcodeops/museum_api
project_urls =
    Bug Tracker = https://github.com/mayankcodeops/museum_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src